--- a/Assets/css/style.css
+++ b/Assets/css/style.css
@@ -14,6 +14,8 @@ main {
 
 h1{
     color: #fce181;
+    font-family: 'Signika', sans-serif;
+    font-family: 'Prompt', sans-serif;
 }
 
 .card-text{
@@ -35,7 +37,7 @@ h1{
 } */
 /* .row {
     padding: 20px;
-    font-family: 'Trebu4het MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
+    font-family: 'Gotu', sans-serif;
     background-color: #2a607c;
     color: #ffffff;
 } */
