--- a/Assets/css/style.css
+++ b/Assets/css/style.css
@@ -4,8 +4,14 @@
     margin: 0;
 }
 
+/* html{
+   min-height: 100%;
+   position: relative; 
+} */
+
 html, body {
     height: 100%;
+    /* margin-bottom: 80px; */
 }
 
 main {
@@ -58,6 +64,8 @@ a{
     padding: 15px;
     font-size: 12px;
     text-align: center;
+    /* position: absolute;
+    bottom: 0; */
  }
 
  @media screen and (max-width: 768px) {
