--- a/Assets/css/style.css
+++ b/Assets/css/style.css
@@ -18,7 +18,7 @@ main {
     background-color: #ff652f;
 }
 
-h1, h2, .card-text, strong, li, {
+h1, h2, .card-text, strong, li {
     color: #fce181;
     font-family: 'Signika', sans-serif;
     font-family: 'Prompt', sans-serif;
