change portfolio.html project bar margin

--- a/Assets/css/stylePortfolio.css
+++ b/Assets/css/stylePortfolio.css
@@ -52,6 +52,7 @@ nav {
 }
 
 .row h2{
+    margin-top: 10px;
     padding: 20px;
     font-family: 'Trebu4het MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
     background-color: #272727;
