--- a/Assets/css/stylePortfolio.css
+++ b/Assets/css/stylePortfolio.css
@@ -71,3 +71,13 @@ a{
     background-color: #272727;
     color: #ff652f;
 }
+
+.footer {
+    width: 100%;
+    height: 10%;
+    background-color: #272727;
+    color: #fce181;
+    padding: 15px;
+    font-size: 12px;
+    text-align: center;
+ }
