add background color for cards, portfolio.html

--- a/Assets/css/stylePortfolio.css
+++ b/Assets/css/stylePortfolio.css
@@ -26,6 +26,9 @@ main{
     background-color: #ff652f;
 }
 
+.project {
+    background-color: #fce181;
+}
 .row h1{
     padding: 20px;
     font-family: 'Trebu4het MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
